--- a/sources/main.css
+++ b/sources/main.css
@@ -74,6 +74,11 @@ p {
   gap: 0.5rem;
 }
 
+.variants-container:has(.compact-display) {
+  max-height: 300px;
+  overflow: auto;
+}
+
 .variant-item {
   gap: 0.25rem;
   border-radius: 4px;
@@ -81,6 +86,11 @@ p {
   min-width: 80px;
   max-width: 120px;
   padding: 0.5rem 0.5rem 0.25rem 0.5rem;
+}
+
+.variant-item:has(.compact-display) {
+  padding: 0.125rem;
+  gap: 0.125rem;
 }
 
 .variant-display-name {
@@ -94,6 +104,12 @@ p {
   image-rendering: pixelated;
   flex-shrink: 0;
   border: 2px solid;
+}
+
+.variant-canvas.compact-display {
+  width: 32px;
+  height: 32px;
+  margin-bottom: 4px;
 }
 
 .subtitle {
